--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ repositories {
 
 test {
     testLogging {
-        events "passed", "skipped", "failed"
+        events "PASSED", "SKIPPED", "FAILED"
     }
 }
 
